--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "15.3.3",
     "nodemailer": "^7.0.3",
     "prisma": "^6.9.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-datepicker": "^8.4.0",
